--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 body {
-background-image: url("../images/map.gif");
+background-image: url("../images/map.jpg");
 
 }
 
+h1, p {
+
+	font-weight: bold;
+}
